--- a/src/common.scss
+++ b/src/common.scss
@@ -1,37 +1,33 @@
+@import "./theme.scss";
+
 @import "/node_modules/normalize.css/normalize.css";
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-
-@mixin light-theme {
-  --background-color: white;
-  --text-color: black;
-}
-
-@mixin dark-theme {
-  --background-color: black;
-  --text-color: white;
-}
-
-:root {
-  @include light-theme;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    @include dark-theme;
-  }
-}
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto:ital@1&family=Source+Code+Pro&display=swap");
 
 body {
-  background: var(--background-color);
-  color: var(--text-color);
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: $font;
+  color: $color;
+  background-color: $backgroundColor;
 }
 
-.center-of-page-container {
-  height: 100vh;
+h1 {
+  font-family: $displayFont;
+  font-size: 5rem;
+  margin-bottom: 1.2rem;
+}
+
+a {
+  font-weight: bold;
+  color: $linkColor;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.centering-container {
   display: flex;
+  padding: 0 $margin;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
 }
