--- a/src/theme.scss
+++ b/src/theme.scss
@@ -9,4 +9,5 @@ $displayFont: "Fredoka One", "Gill Sans", "Gill Sans MT", Calibri,
   "Trebuchet MS", sans-serif;
 $monospaceFont: "Source Code Pro", monospace;
 
-$margin: 15%;
+$margin: 15vw;
+$backdropHeight: max(50vh, 20rem);
