--- a/src/home/top-panel/backdrop.scss
+++ b/src/home/top-panel/backdrop.scss
@@ -1,16 +1,15 @@
 @import "../../theme.scss";
 
-$backdropSize: 50vh;
-
 .backdrop {
-  height: $backdropSize;
+  background-color: #181818;
+  height: $backdropHeight;
   clip-path: url(#backdrop-clip);
 }
 
 .backdrop-shadow {
   background-color: $darkAccentColor;
   width: 100%;
-  height: $backdropSize;
+  height: $backdropHeight;
   position: absolute;
   top: 3px;
   left: 0px;
@@ -21,4 +20,13 @@ $backdropSize: 50vh;
   position: absolute;
   width: 0;
   height: 0;
+}
+
+.backdrop-canvas {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: $backdropHeight;
 }
