--- a/src/home/top-panel/top-panel.scss
+++ b/src/home/top-panel/top-panel.scss
@@ -1,7 +1,17 @@
 @import "../../theme.scss";
 
 .backdrop-content {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+}
+
+.greeting {
+  display: flex;
   height: 80%;
+  padding: 0 $margin;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .social-links {
@@ -22,8 +32,20 @@
 }
 
 .portrait {
-  position: absolute;
   width: 20vw;
-  right: $margin;
-  bottom: 12%;
+  align-self: flex-end;
+  margin-right: $margin;
+  padding-bottom: calc(#{$backdropHeight} * 0.1);
+  user-select: none;
+}
+
+.backdrop-content-breaker {
+  flex-grow: 1;
+}
+
+@media only screen and (max-width: 50rem) {
+  .portrait,
+  .backdrop-content-breaker {
+    display: none;
+  }
 }
