--- a/src/home/top-panel/backdrop.scss
+++ b/src/home/top-panel/backdrop.scss
@@ -11,7 +11,7 @@
   width: 100%;
   height: $backdropHeight;
   position: absolute;
-  top: 3px;
+  top: 0.6vh;
   left: 0px;
   clip-path: url(#backdrop-clip);
 }
