--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,13 +1,15 @@
 $color: #eee;
 $backgroundColor: #222;
 $darkAccentColor: #121212;
-$linkColor: #198077;
+$linkColor: #35c7bb;
+$darkLinkColor: #1e948a;
+$highlightColor: #01b46a;
 
-$font: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu,
-  Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+$font: "Varela Round", Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 $displayFont: "Fredoka One", "Gill Sans", "Gill Sans MT", Calibri,
   "Trebuchet MS", sans-serif;
 $monospaceFont: "Source Code Pro", monospace;
 
-$margin: 15vw;
+$margin: 10vw;
 $backdropHeight: max(50vh, 20rem);
