--- a/src/common.scss
+++ b/src/common.scss
@@ -3,6 +3,12 @@
 @import "/node_modules/normalize.css/normalize.css";
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Varela+Round&family=Source+Code+Pro&display=swap");
 
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 body {
   font-family: $font;
   font-size: 1.05rem;
