--- a/src/theme.scss
+++ b/src/theme.scss
@@ -6,6 +6,10 @@ $linkColor: #35c7bb;
 $darkLinkColor: #1e948a;
 $highlightColor: #01b46a;
 
+$successColor: #2fc492;
+$errorColor: #e23636;
+$processingColor: #369de2;
+
 $font: "Varela Round", Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI",
   Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 $displayFont: "Fredoka One", "Gill Sans", "Gill Sans MT", Calibri,
