Add projects content

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -1,10 +1,10 @@
 @import "../theme.scss";
 
-.content {
+.content > section {
   margin: 2rem $margin 0 $margin;
 }
 
-.frontmatter-markdown {
+.about-container .frontmatter-markdown {
   text-align: justify;
   columns: 2;
   column-gap: 2rem;
@@ -14,18 +14,21 @@
 
 .heading-wrapper {
   margin: 3rem 0 1rem 0;
+  text-align: center;
 }
 
-.heading {
-  display: inline;
-  font-family: $displayFont;
-  font-size: 3rem;
-  padding: 0 5px 0px 5px;
-  background: linear-gradient(to bottom, transparent 50%, $highlightColor 50%);
+.work-container {
+  display: flex;
+  justify-content: center;
+}
+
+.work-container > * {
+  max-width: 45rem;
+  flex-grow: 1;
 }
 
 @media only screen and (max-width: 50rem) {
-  .frontmatter-markdown {
+  .about-container .frontmatter-markdown {
     columns: 1;
   }
 }
