--- a/src/theme.scss
+++ b/src/theme.scss
@@ -21,3 +21,5 @@ $backdropHeight: max(50vh, 20rem);
 
 // Clip path needs to be changed when changing this
 $footerBackdropRatio: 3;
+// Clip path needs to be changed when changing this
+$projectPanelRatio: 3;
