--- a/src/common.scss
+++ b/src/common.scss
@@ -22,6 +22,14 @@ h1 {
   margin-bottom: 1.2rem;
 }
 
+h2 {
+  display: inline;
+  font-family: $displayFont;
+  font-size: calc(2rem + 1vw);
+  padding: 0 5px 0px 5px;
+  background: linear-gradient(to bottom, transparent 60%, $highlightColor 40%);
+}
+
 p {
   margin-top: 0;
 }
