--- a/src/home/projects-panel.scss
+++ b/src/home/projects-panel.scss
@@ -11,7 +11,7 @@ $projectMinWidth: 25rem;
   justify-items: center;
   justify-content: space-between;
   grid-auto-flow: dense;
-  grid-template-columns: repeat(auto-fit, minmax($projectMinWidth, 1fr));
+  grid-template-columns: repeat(4, minmax($projectMinWidth, 1fr));
 
   gap: 2.5rem;
   padding: 0 $margin;
@@ -123,7 +123,13 @@ $projectMinWidth: 25rem;
   top: 0.6vh;
 }
 
-@media only screen and (max-width: 45rem) {
+@media only screen and (max-width: 135rem) {
+  .projects-panel {
+    grid-template-columns: repeat(2, minmax($projectMinWidth, 1fr));
+  }
+}
+
+@media only screen and (max-width: 67.5rem) {
   .projects-panel {
     display: flex;
     flex-direction: column;
