--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: rgb(245 245 245);
+  font-family: var(--font-inter);
+}
+
+.fredoka {
+  font-family: var(--font-fredoka);
+}
