--- a/app/posts/markdown.css
+++ b/app/posts/markdown.css
@@ -27,21 +27,23 @@
 .md-content .highlight-header:not(:has(.highlight-caption)) {
   position: absolute;
   top: 0.5rem;
-  right: 1rem;
+  right: 0.5rem;
 }
 
 .md-content .highlight-header:has(.highlight-caption) {
   display: flex;
   flex-direction: row-reverse;
   gap: 1rem;
-  align-items: baseline;
-  padding: 0.5rem 1rem 0.25rem 1rem;
+  align-items: center;
+  padding: 0.5rem 0.5rem 0.25rem 1rem;
   border-bottom: 1px solid #78716c;
 }
 
 .md-content .highlight-language {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
+
+  font-size: 90%;
 
   font-weight: 600;
 
