--- a/app/global.css
+++ b/app/global.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-padding-top: 100px;
+}
+
 body {
   background-color: #fafaf9;
   font-family: var(--font-inter);
